[gd_scene load_steps=3 format=3 uid="uid://n4w3olcy28at"]

[ext_resource type="Theme" path="res://theme/ui_theme.tres" id="1_unrjv"]
[ext_resource type="Script" path="res://menu/graphics/graphics_controller.gd" id="2_txdvq"]

[node name="GraphicSettings" type="MarginContainer"]
offset_right = 83.0
offset_bottom = 23.0
theme = ExtResource("1_unrjv")
script = ExtResource("2_txdvq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ResoultionContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="VBoxContainer/ResoultionContainer"]
custom_minimum_size = Vector2(192, 24)
layout_mode = 2
text = "Resolution"
horizontal_alignment = 2
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/ResoultionContainer"]
custom_minimum_size = Vector2(196, 32)
layout_mode = 2

[node name="FullscreenContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="VBoxContainer/FullscreenContainer"]
custom_minimum_size = Vector2(192, 24)
layout_mode = 2
text = "Fullscreen"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/FullscreenContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_unrjv")

[connection signal="item_selected" from="VBoxContainer/ResoultionContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="VBoxContainer/FullscreenContainer/CheckBox" to="." method="_on_check_box_toggled"]
